# public/swagger.yaml
@@ -396,6 +396,77 @@ paths:
           $ref: '#/components/responses/InvalidParams'
         401:
           $ref: '#/components/responses/Unauthorized'
+    get:
+      tags:
+      - Export
+      summary: Get all Export
+      parameters:
+        - name: user_id
+          in: query
+          schema:
+            type: integer
+            example: 1
+        - name: import_id
+          in: query
+          schema:
+            type: integer
+            example: 1
+        - name: inventory_id
+          in: query
+          schema:
+            type: integer
+            example: 1
+        - name: customer_id
+          in: query
+          schema:
+            type: integer
+            example: 1
+        - name: from_date
+          in: query
+          schema:
+            type: string
+            format: date
+            example: '2020-12-12'
+        - name: to_date
+          in: query
+          schema:
+            type: string
+            format: date
+            example: '2020-12-12'
+        - name: from_sell_price
+          in: query
+          schema:
+            type: integer
+            example: 1000
+        - name: to_sell_price
+          in: query
+          schema:
+            type: integer
+            example: 2000
+        - name: sort
+          in: query
+          schema:
+            type: string
+            example: 'user_id: desc, created_at: asc'
+      responses:
+        200:
+          description: successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: 
+                  data:
+                      type: array
+                      items:
+                        type: object
+                        $ref: '#/components/schemas/Export'
+                  meta:
+                      $ref: '#/components/schemas/Pagination'
+        422:
+          $ref: '#/components/responses/InvalidParams'
+        401:
+          $ref: '#/components/responses/Unauthorized'
   /imports:
     post:
       tags:
